--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ select {
 }
 
 .btn-white {
-    @apply px-5 py-[10px] rounded-[4px] text-[#07299E] border bottom-1 border-solid hover:text-white text-base relative transition-all duration-500 ease-in-out font-[500];
+    @apply px-5 py-[10px] rounded-[4px] text-[#07299E] border bottom-1 border-solid hover:text-white text-base relative transition-all duration-500 ease-in-out font-[500] z-10;
 }
 
 .btn-white::before {
@@ -47,7 +47,7 @@ select {
 }
 
 .btn-blue {
-    @apply mt-[45px] flex items-center gap-[10px] px-5 py-[10px] rounded-[4px] text-[#5C409C] stroke-[#5C409C] border-[#5C409C] border bottom-1 border-solid hover:text-white hover:stroke-white text-base relative transition-all duration-500 ease-in-out font-[500];
+    @apply mt-[45px] flex items-center gap-[10px] px-5 py-[10px] rounded-[4px] text-[#5C409C] stroke-[#5C409C] border-[#5C409C] border bottom-1 border-solid hover:text-white hover:stroke-white text-base relative transition-all duration-500 ease-in-out font-[500] z-10;
 }
 
 .btn-blue::before {
