--- a/src/Components/CalculateWizard/CalculateWizard.css
+++ b/src/Components/CalculateWizard/CalculateWizard.css
@@ -2,7 +2,7 @@
     @apply flex flex-col items-center justify-center;
 }
 .warehouse_form_step .step_1 .wizard_1 .wizard_grid .form-label {
-    @apply text-sm font-[500] text-[#474747] text-left pb-[10px] mt-[30px];
+    @apply lg:text-sm text-xs font-[500] text-[#474747] text-left pb-[10px] lg:mt-[30px];
 }
 
 .warehouse_form_step .step_1 .wizard_1 .wizard_grid .radio-bx {
@@ -14,7 +14,7 @@
 }
 
 .warehouse_form_step .step_1 .wizard_1 .wizard_grid .radio-bx label {
-    @apply bg-[#5C409C] bg-opacity-5 text-[#5C409C] text-base py-[5px] px-[10px] font-[500] transition-all duration-500 ease-in-out rounded-[4px];
+    @apply bg-[#5C409C] bg-opacity-5 text-[#5C409C] lg:text-base text-sm py-[5px] lg:px-[10px] px-2 font-[500] transition-all duration-500 ease-in-out rounded-[4px];
 }
 
 .warehouse_form_step .step_1 .wizard_1 .wizard_grid .radio-bx input[type=radio]:checked+label {
