--- a/src/Components/CalculateWizard/CalculateWizard.css
+++ b/src/Components/CalculateWizard/CalculateWizard.css
@@ -34,5 +34,5 @@
     @apply text-base text-right text-[#5C409C]
 }
 .warehouse_form_step .step_1 .wizard_1 .wizard_grid .select-btn select {
-    @apply bg-[#5C409C0D] text-[#5C409C] text-base w-full rounded-[4px] px-[12px] py-1;
+    @apply bg-[#5C409C0D] text-[#5C409C] lg:text-base text-sm w-full rounded-[4px] px-[12px] py-1;
 }
